--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,13 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  ci:
 
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
       - name: Setup dependencies
-        run: sudo apt-get install make clang-format-3.8 clang-tidy-3.8
+        run: sudo apt-get install make clang-format
       - name: Run make ci target
         run: make ci
